cpp/grains/run-tests-cpp.txt
Running automated test file(s):


===============================================================================

Running: make clean
rm -rf ./build

real	0m0.008s
user	0m0.000s
sys	0m0.008s

===============================================================================

export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"

===============================================================================

Running: make coverage | ansifilter
rm -rf ./build
mkdir -pv ./build
mkdir: created directory './build'

cd ./build; export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"; cmake -DEXERCISM_RUN_ALL_TESTS=1 -DCMAKE_EXPORT_COMPILE_COMMANDS=1 -G 'Unix Makefiles' ../; if make; then printf "\n=== All Tests Passed ===\n"; else printf "\n=== Test Failure ===\n"; false; fi
-- The CXX compiler identification is GNU 10.2.1
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Configuring done
-- Generating done
-- Build files have been written to: /home/vpayno/git_vpayno/exercism-workspace/cpp/grains/build
make[1]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/grains/build'
make[2]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/grains/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/grains/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/grains/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/grains/build'
[ 25%] Building CXX object CMakeFiles/grains.dir/grains_test.cpp.o
[ 50%] Building CXX object CMakeFiles/grains.dir/grains.cpp.o
[ 75%] Building CXX object CMakeFiles/grains.dir/test/tests-main.cpp.o
[100%] Linking CXX executable grains
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/grains/build'
[100%] Built target grains
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/grains/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/grains/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/grains/build'
===============================================================================
All tests passed (8 assertions in 8 test cases)

make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/grains/build'
[100%] Built target test_grains
make[2]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/grains/build'
make[1]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/grains/build'

=== All Tests Passed ===

find . -regextype posix-egrep -regex "^.*(tests-main|CompilerId).*[.](gcda|gcno)$" -print -delete
./build/CMakeFiles/3.22.2/CompilerIdCXX/CMakeCXXCompilerId.gcno
./build/CMakeFiles/grains.dir/test/tests-main.cpp.gcno
./build/CMakeFiles/grains.dir/test/tests-main.cpp.gcda

find . -regextype posix-egrep -regex "^.*[.](gcda|gcno)32104"

gcovr --print-summary
------------------------------------------------------------------------------
                           GCC Code Coverage Report
Directory: .
------------------------------------------------------------------------------
File                                       Lines    Exec  Cover   Missing
------------------------------------------------------------------------------
grains.cpp                                     8       7    87%   10
grains_test.cpp                               24      24   100%   
test/catch.hpp                                32      27    84%   1642-1643,2227,2229,2560
------------------------------------------------------------------------------
TOTAL                                         64      58    90%
------------------------------------------------------------------------------
lines: 90.6% (58 out of 64)
branches: 37.0% (51 out of 138)

real	0m8.965s
user	0m8.345s
sys	0m0.598s

===============================================================================

cmake-format --in-place CMakeLists.txt

real	0m0.146s
user	0m0.102s
sys	0m0.045s

===============================================================================

cmake-lint CMakeLists.txt
CMakeLists.txt
==============
CMakeLists.txt:15,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:17,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:61,70: [C0307] Bad indentation:
                                               )
  ^----BodyNode: 1:0->IfBlockNode: 59:0->BodyNode: 59:11->StatementNode: 60:2->TreeNode: 61:70

CMakeLists.txt:66,02: [C0113] Missing COMMENT in statement which allows it

Summary
=======
files scanned: 1
found lint:
  Convention: 4


real	0m0.154s
user	0m0.107s
sys	0m0.048s

===============================================================================

Running: clang-format-16 -style=file -i ./grains.cpp ./grains_test.cpp ./grains.h

real	0m0.019s
user	0m0.012s
sys	0m0.007s

===============================================================================

Running: ../../.github/citools/cpp/clang-check
clang-check-16 --analyze ./grains.cpp ./grains_test.cpp ./grains.h
error: argument unused during compilation: '-stdlib=libstdc++' [-Werror,-Wunused-command-line-argument]
error: invalid argument '-std=c++17' not allowed with 'C'
/home/vpayno/git_vpayno/exercism-workspace/cpp/grains/grains.h:4:10: fatal error: 'cmath' file not found
#include <cmath>
         ^~~~~~~
1 error generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/grains/grains.h.

real	0m0.460s
user	0m0.425s
sys	0m0.034s


real	0m0.462s
user	0m0.425s
sys	0m0.036s

===============================================================================

Running: ../../.github/citools/cpp/clang-tidy | head -n 100
8739 warnings generated.
44091 warnings generated.
44091 warnings and 3 errors generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/grains/grains.h.
Suppressed 44096 warnings (44091 in non-user code, 5 NOLINT).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
Found compiler error(s).

real	0m6.501s
user	0m6.444s
sys	0m0.057s
Running: clang-tidy-16 ./grains.cpp ./grains_test.cpp ./grains.h
error: invalid argument '-std=c++17' not allowed with 'C' [clang-diagnostic-error]
error: argument unused during compilation: '-stdlib=libstdc++' [clang-diagnostic-unused-command-line-argument]
/home/vpayno/git_vpayno/exercism-workspace/cpp/grains/grains.h:4:10: error: 'cmath' file not found [clang-diagnostic-error]
#include <cmath>
         ^~~~~~~


real	0m6.504s
user	0m6.446s
sys	0m0.059s

===============================================================================

